--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,18 +12,27 @@
       http://java.sun.com/xml/ns/javaee
       http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
    <!-- Activate the JSF 2.0 servlet -->
-   <servlet>
-      <servlet-name>Faces Servlet</servlet-name>
-      <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-      <load-on-startup>1</load-on-startup>
-   </servlet>
-
-   <!-- Tell the context which URLs to process as facelets.  -->
-   <servlet-mapping>
-      <servlet-name>Faces Servlet</servlet-name>
-      <url-pattern>*.jsf</url-pattern>
-   </servlet-mapping>
-
+    <servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  <!-- Welcome page -->
+  
+	<welcome-file-list>
+		<welcome-file>pages/index.xhtml</welcome-file>
+	</welcome-file-list>
+	
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>*.xhtml</url-pattern>
+	</servlet-mapping>
+	
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>redmond</param-value>
+	</context-param>
    <!-- This is an optional parameter, but it makes troubleshooting errors much easier.  -->
    <!-- You may want to delete it before final deployment -->
    <!-- <context-param>
@@ -35,12 +44,5 @@
       <persistence-unit-ref-name>widgets/pu</persistence-unit-ref-name>
       <persistence-unit-name>widgets</persistence-unit-name>
    </persistence-unit-ref> -->
-   <servlet-mapping> 
-	    <servlet-name>Faces Servlet</servlet-name>
-	    <url-pattern>*.faces</url-pattern>
-   </servlet-mapping>
-   <servlet-mapping>
-	    <servlet-name>Faces Servlet</servlet-name>
-	    <url-pattern>/faces/*</url-pattern>
-   </servlet-mapping>
+   
 </web-app>
