create with clasification

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -223,6 +223,7 @@ CreateIdeaLabel_idusuario=Idusuario:
 CreateIdeaTitle_idusuario=Idusuario
 CreateIdeaLabel_idestadoIdea=IdestadoIdea:
 CreateIdeaTitle_idestadoIdea=IdestadoIdea
+CreateIdeaLabel_clasification=Clasificaci\u00f3n:
 EditIdeaTitle=Edit Idea
 EditIdeaSaveLink=Save
 EditIdeaViewLink=View
