Se modifica el Crear una nueva idea, para que no sea necesario que el usuario ingrese el id, fecha, activo, etc.

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -224,6 +224,7 @@ CreateIdeaTitle_idusuario=Idusuario
 CreateIdeaLabel_idestadoIdea=IdestadoIdea:
 CreateIdeaTitle_idestadoIdea=IdestadoIdea
 CreateIdeaLabel_clasification=Clasificaci\u00f3n:
+CreateIdeaTitle_required=The idea title field is required.
 EditIdeaTitle=Edit Idea
 EditIdeaSaveLink=Save
 EditIdeaViewLink=View
