--- a/Idea-war/nbproject/private/private.properties
+++ b/Idea-war/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Paflo\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3-1705485440.properties
+deploy.ant.properties.file=C:\\Users\\mfreire\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3-463378785.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=E:/desarrollo/servers/glassfish4/glassfish/domains/domain1
-j2ee.server.home=E:/desarrollo/servers/glassfish4/glassfish
-j2ee.server.instance=[E:\\desarrollo\\servers\\glassfish4\\glassfish;E:\\desarrollo\\servers\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=E:/desarrollo/servers/glassfish4
+j2ee.server.domain=C:/Java/glassfish-4.1/glassfish4/glassfish/domains/domain1
+j2ee.server.home=C:/Java/glassfish-4.1/glassfish4/glassfish
+j2ee.server.instance=[C:\\Java\\glassfish-4.1\\glassfish4\\glassfish;C:\\Java\\glassfish-4.1\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Java/glassfish-4.1/glassfish4
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Paflo\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\mfreire\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
