Cambios de títulos a las páginas.

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -253,10 +253,10 @@ ViewIdeaShowAllLink=Show All Idea Items
 ViewIdeaIndexLink=Index
 ViewIdeaLabel_ididea=Ididea:
 ViewIdeaTitle_ididea=Ididea
-ViewIdeaLabel_titulo=Titulo:
-ViewIdeaTitle_titulo=Titulo
-ViewIdeaLabel_descripcion=Descripcion:
-ViewIdeaTitle_descripcion=Descripcion
+ViewIdeaLabel_titulo=Title:
+ViewIdeaTitle_titulo=Title
+ViewIdeaLabel_descripcion=Description:
+ViewIdeaTitle_descripcion=Description
 ViewIdeaLabel_fechaRegistro=FechaRegistro:
 ViewIdeaTitle_fechaRegistro=FechaRegistro
 ViewIdeaLabel_activo=Activo:
@@ -273,12 +273,12 @@ ListIdeaViewLink=View
 ListIdeaCreateLink=Create New Idea
 ListIdeaIndexLink=Index
 ListIdeaTitle_ididea=Ididea
-ListIdeaTitle_titulo=Titulo
-ListIdeaTitle_descripcion=Descripcion
-ListIdeaTitle_fechaRegistro=FechaRegistro
+ListIdeaTitle_titulo=Title
+ListIdeaTitle_descripcion=Description
+ListIdeaTitle_fechaRegistro=Creation Date
 ListIdeaTitle_activo=Activo
-ListIdeaTitle_idusuario=Idusuario
-ListIdeaTitle_idestadoIdea=IdestadoIdea
+ListIdeaTitle_idusuario=Creation User
+ListIdeaTitle_idestadoIdea=Status
 OfertaCreated=Oferta was successfully created.
 OfertaUpdated=Oferta was successfully updated.
 OfertaDeleted=Oferta was successfully deleted.
@@ -534,3 +534,7 @@ ListVentaTitle_fechaFin=FechaFin
 ListVentaTitle_activo=Activo
 ListVentaTitle_ididea=Ididea
 ListVentaTitle_idestadoSubasta=IdestadoSubasta
+ListIdeaCreateLenged=Create new Idea
+IdeaListLenged=Ideas
+ListIdeaViewLenged= View Idea
+ListIdeaEditLenged=Edit Idea
