--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /nbproject/private/
-/build/
-/dist/
-/Idea-war/build/
+/build
+/dist
+/Idea-war/build
 *.war
 *.ear
