back button label

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -2,6 +2,7 @@ PersistenceErrorOccured=A persistence error occurred.
 Previous=Previous
 Next=Next
 
+Back=Back
 ClasificacionCreated=Clasificacion was successfully created.
 ClasificacionUpdated=Clasificacion was successfully updated.
 ClasificacionDeleted=Clasificacion was successfully deleted.
