Login - using EJB Data Management - final

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -393,7 +393,7 @@ ListPerfilTitle_descripcion=Descripcion
 UsuarioCreated=Usuario was successfully created.
 UsuarioUpdated=Usuario was successfully updated.
 UsuarioDeleted=Usuario was successfully deleted.
-CreateUsuarioTitle=Create New Usuario
+CreateUsuarioTitle=Register
 CreateUsuarioSaveLink=Save
 CreateUsuarioShowAllLink=Show All Usuario Items
 CreateUsuarioIndexLink=Index
@@ -539,3 +539,5 @@ ListIdeaCreateLenged=Create new Idea
 IdeaListLenged=Ideas
 ListIdeaViewLenged= View Idea
 ListIdeaEditLenged=Edit Idea
+LoginUsuarioTitle_correo=Username
+LoginUsuarioTitle_password=Password
