--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -3,6 +3,7 @@ Previous=Previous
 Next=Next
 
 Back=Back
+NoClasificationSelected= No Clasification Selected
 ClasificacionCreated=Clasificacion was successfully created.
 ClasificacionUpdated=Clasificacion was successfully updated.
 ClasificacionDeleted=Clasificacion was successfully deleted.
