Validations and other changes

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -3,16 +3,16 @@ Previous=Previous
 Next=Next
 
 Back=Back
-NoClasificationSelected= No Clasification Selected
-ClasificacionCreated=Clasificacion was successfully created.
-ClasificacionUpdated=Clasificacion was successfully updated.
-ClasificacionDeleted=Clasificacion was successfully deleted.
+NoClasificationSelected= No Classification Selected
+ClasificacionCreated=Classification was successfully created.
+ClasificacionUpdated=Classification was successfully updated.
+ClasificacionDeleted=Classification was successfully deleted.
 CreateClasificacionTitle=Create New Clasificacion
 CreateClasificacionSaveLink=Save
-CreateClasificacionShowAllLink=Show All Clasificacion Items
+CreateClasificacionShowAllLink=Show All Classification Items
 CreateClasificacionIndexLink=Index
 CreateClasificacionLabel_idclasificacion=Idclasificacion:
-CreateClasificacionRequiredMessage_idclasificacion=The Idclasificacion field is required.
+CreateClasificacionRequiredMessage_idclasificacion=The IdClassification field is required.
 CreateClasificacionTitle_idclasificacion=Idclasificacion
 CreateClasificacionLabel_nombre=Nombre:
 CreateClasificacionTitle_nombre=Nombre
@@ -21,10 +21,10 @@ CreateClasificacionTitle_descripcion=Descripcion
 EditClasificacionTitle=Edit Clasificacion
 EditClasificacionSaveLink=Save
 EditClasificacionViewLink=View
-EditClasificacionShowAllLink=Show All Clasificacion Items
+EditClasificacionShowAllLink=Show All Classification Items
 EditClasificacionIndexLink=Index
 EditClasificacionLabel_idclasificacion=Idclasificacion:
-EditClasificacionRequiredMessage_idclasificacion=The Idclasificacion field is required.
+EditClasificacionRequiredMessage_idclasificacion=The IdClassification field is required.
 EditClasificacionTitle_idclasificacion=Idclasificacion
 EditClasificacionLabel_nombre=Nombre:
 EditClasificacionTitle_nombre=Nombre
@@ -34,7 +34,7 @@ ViewClasificacionTitle=View
 ViewClasificacionDestroyLink=Destroy
 ViewClasificacionEditLink=Edit
 ViewClasificacionCreateLink=Create New Clasificacion
-ViewClasificacionShowAllLink=Show All Clasificacion Items
+ViewClasificacionShowAllLink=Show All Classification Items
 ViewClasificacionIndexLink=Index
 ViewClasificacionLabel_idclasificacion=Idclasificacion:
 ViewClasificacionTitle_idclasificacion=Idclasificacion
@@ -43,7 +43,7 @@ ViewClasificacionTitle_nombre=Nombre
 ViewClasificacionLabel_descripcion=Descripcion:
 ViewClasificacionTitle_descripcion=Descripcion
 ListClasificacionTitle=List
-ListClasificacionEmpty=(No Clasificacion Items Found)
+ListClasificacionEmpty=(No Classification Items Found)
 ListClasificacionDestroyLink=Destroy
 ListClasificacionEditLink=Edit
 ListClasificacionViewLink=View
@@ -394,7 +394,7 @@ ListPerfilTitle_descripcion=Descripcion
 UsuarioCreated=Usuario was successfully created.
 UsuarioUpdated=Usuario was successfully updated.
 UsuarioDeleted=Usuario was successfully deleted.
-CreateUsuarioTitle=Register
+CreateUsuarioTitle=Register New User
 CreateUsuarioSaveLink=Save
 CreateUsuarioShowAllLink=Show All Usuario Items
 CreateUsuarioIndexLink=Index
@@ -540,5 +540,7 @@ ListIdeaCreateLenged=Create new Idea
 IdeaListLenged=Ideas
 ListIdeaViewLenged= View Idea
 ListIdeaEditLenged=Edit Idea
-LoginUsuarioTitle_correo=Username
-LoginUsuarioTitle_password=Password
+LoginFail=Usuario o Password incorrecto
+logOff=Log Off.
+ingresoSistema=Log in
+RequiredPassword = Password is required 
