Validations and other changes

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -543,4 +543,6 @@ ListIdeaEditLenged=Edit Idea
 LoginFail=Usuario o Password incorrecto
 logOff=Log Off.
 ingresoSistema=Log in
-RequiredPassword = Password is required 
+RequiredPassword = Password is required
+RequiredEmail = E-mail is required
+RequiredNam = Name is required 
