--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -545,4 +545,4 @@ logOff=Log Off.
 ingresoSistema=Log in
 RequiredPassword = Password is required
 RequiredEmail = E-mail is required
-RequiredNam = Name is required 
+RequiredName = Name is required 
