Validations changes for register.xhtml

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -543,6 +543,8 @@ ListIdeaEditLenged=Edit Idea
 LoginFail=Usuario o Password incorrecto
 logOff=Log Off.
 ingresoSistema=Log in
-RequiredPassword = Password is required
-RequiredEmail = E-mail is required
-RequiredName = Name is required 
+RequiredPassword=Password is required
+RequiredEmail=E-mail is required
+RequiredName=Name is required
+EmailValidation=Invalid email format, please check instruction below
+PasswordValidation=Invalid password format, please check instruction below  
