--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -548,3 +548,5 @@ RequiredEmail=E-mail is required
 RequiredName=Name is required
 EmailValidation=Invalid email format, please check instruction below
 PasswordValidation=Invalid password format, please check instruction below  
+Comments = Comments
+NewComment = New Comment
