Create Idea - insert idUsuario and idEstadoIdea. CREATE.XHTML have EstadoIdea selection Login.XHTML - instert icons in button, adjust buttons Register.XHTML - instert icons in button

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -227,6 +227,7 @@ CreateIdeaLabel_idestadoIdea=IdestadoIdea:
 CreateIdeaTitle_idestadoIdea=IdestadoIdea
 CreateIdeaLabel_clasification=Classification:
 CreateIdeaTitle_required=The idea title field is required.
+CreateIdeaTitle_status=The status field is required.
 EditIdeaTitle=Edit Idea
 EditIdeaSaveLink=Save
 EditIdeaViewLink=View
