Create Idea - insert idUsuario and idEstadoIdea. CREATE.XHTML have EstadoIdea selection Login.XHTML - instert icons in button, adjust buttons Register.XHTML - instert icons in button

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -4,6 +4,7 @@ Next=Next
 
 Back=Back
 NoClasificationSelected= No Classification Selected
+NoStatusSelected= No status selected
 ClasificacionCreated=Classification was successfully created.
 ClasificacionUpdated=Classification was successfully updated.
 ClasificacionDeleted=Classification was successfully deleted.
