Create Idea - Edit.XHTML - instert status changes Create Idea - View.XHTML - instert status changes

--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -207,6 +207,7 @@ ListEstadoSubastaTitle_descripcion=Descripcion
 IdeaCreated=Idea was successfully created.
 IdeaUpdated=Idea was successfully updated.
 IdeaDeleted=Idea was successfully deleted.
+CreateIdeaDescription_required=The field description can not be empty
 CreateIdeaTitle=Create New Idea
 CreateIdeaSaveLink=Save
 CreateIdeaShowAllLink=Show All Idea Items
@@ -229,6 +230,7 @@ CreateIdeaTitle_idestadoIdea=IdestadoIdea
 CreateIdeaLabel_clasification=Classification:
 CreateIdeaTitle_required=The idea title field is required.
 CreateIdeaTitle_status=The status field is required.
+CreateIdeaLabel_status=Status:
 EditIdeaTitle=Edit Idea
 EditIdeaSaveLink=Save
 EditIdeaViewLink=View
