--- a/Idea-war/src/java/Bundle.properties
+++ b/Idea-war/src/java/Bundle.properties
@@ -554,3 +554,5 @@ EmailValidation=Invalid email format, please check instruction below
 PasswordValidation=Invalid password format, please check instruction below  
 Comments = Comments
 NewComment = New Comment
+SaveComment = Create Comment
+UserComment = User:
